fix eliminacion jesus

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>logo-neuraldata-cyan.svg" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
       rel="stylesheet"
@@ -17,6 +17,15 @@
       rel="stylesheet"
     />
     <link rel=" stylesheet " href=" https://unpkg.com/aos@next/dist/aos.css " />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XSTFX23T7X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XSTFX23T7X');
+</script>
    
   </head>
   <body>
